--- a/ionic1.html
+++ b/ionic1.html
@@ -13,51 +13,21 @@
     </div>
 
     <div class="overflow-scroll">
-        <div class="content has-header ionic-pseudo">
-
-            <div class="list card">
-
-                <a href="#" class="item item-icon-left">
-                    <i class="icon ion-home"></i>
-                    Enter home address
-                </a>
-
-                <a href="#" class="item item-icon-left">
-                    <i class="icon ion-ios-telephone"></i>
-                    Enter phone number
-                </a>
-
-                <a href="#" class="item item-icon-left">
-                    <i class="icon ion-wifi"></i>
-                    Enter wireless password
-                </a>
-
-                <a href="#" class="item item-icon-left">
-                    <i class="icon ion-card"></i>
-                    Enter card information
-                </a>
-
-            </div>
-
+        <div style="height:44px; width:100%; clear:both;">
         </div>
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="{{image_path}}">
-                <h2>Marty McFly</h2>
-                <p>November 05, 1955</p>
+                <img src="boy.jpg">
+                <h2>Anonymous</h2>
+                <p>Guys can you help me with my homework?</p>
             </div>
 
             <div class="item item-body">
-                <img class="full-image" src="delorean.jpg">
+                <img class="full-image" src="circuit.jpg">
                 <p>
-                    This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-                    the content is from a card-body consisting of an image and paragraph text. The footer
-                    consists of tabs, icons aligned left, within the card-footer.
-                </p>
-                <p>
-                    <a href="#" class="subdued">1 Like</a>
-                    <a href="#" class="subdued">5 Comments</a>
+                    <a href="#" class="subdued">12 Like</a>
+                    <a href="#" class="subdued">7 Comments</a>
                 </p>
             </div>
 
@@ -80,21 +50,49 @@
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="{{image_path}}">
-                <h2>Marty McFly</h2>
-                <p>November 05, 1955</p>
+                <img src="girl.jpg">
+                <h2>Anonymous</h2>
+                <p>I will give something in return if you can help me :D</p>
             </div>
 
             <div class="item item-body">
-                <img class="full-image" src="delorean.jpg">
+                <img class="full-image" src="math.jpg">
                 <p>
-                    This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-                    the content is from a card-body consisting of an image and paragraph text. The footer
-                    consists of tabs, icons aligned left, within the card-footer.
+                    <a href="#" class="subdued">27 Like</a>
+                    <a href="#" class="subdued">17 Comments</a>
                 </p>
+            </div>
+
+            <div class="item tabs tabs-secondary tabs-icon-left">
+                <a class="tab-item" href="#">
+                    <i class="icon ion-thumbsup"></i>
+                    Like
+                </a>
+                <a class="tab-item" href="#">
+                    <i class="icon ion-chatbox"></i>
+                    Comment
+                </a>
+                <a class="tab-item" href="#">
+                    <i class="icon ion-share"></i>
+                    Share
+                </a>
+            </div>
+
+        </div>
+
+        <div class="list card">
+
+            <div class="item item-avatar">
+                <img src="boy.jpg">
+                <h2>Anonymous</h2>
+                <p>I don't know what's wrong with my code :(</p>
+            </div>
+
+            <div class="item item-body">
+                <img class="full-image" src="java.png">
                 <p>
-                    <a href="#" class="subdued">1 Like</a>
-                    <a href="#" class="subdued">5 Comments</a>
+                    <a href="#" class="subdued">3 Like</a>
+                    <a href="#" class="subdued">11 Comments</a>
                 </p>
             </div>
 
